--- a/nomyx-library.cabal
+++ b/nomyx-library.cabal
@@ -1,4 +1,4 @@
-name: Nomyx-Library
+name: nomyx-library
 version: 1.0.0
 cabal-version: >=1.8
 build-type: Simple
@@ -26,7 +26,7 @@ data-dir: src
 extra-source-files: AUTHORS README
 
 library
-    build-depends: Nomyx-Language     == 1.0.0,
+    build-depends: nomyx-language     == 1.0.*,
                    base               >= 4.6 && < 5,
                    containers         == 0.5.*,
                    ghc                >= 7.6 && < 8.1,
