--- a/stack.yaml
+++ b/stack.yaml
@@ -1,16 +1,16 @@
 flags: {}
 packages:
 - '.'
-- location: ../Nomyx-Language
+- location: ../nomyx-language
   extra-dep: true
-- location: ../Imprevu
+- location: ../imprevu
   extra-dep: true
 - location: ../shortcut
   extra-dep: true
 extra-deps:
 - DebugTraceHelpers-0.12
 - time-recurrence-0.9.2
-- data-ordlist-0.4.7.0
-- shortcut-0.1
 - NoTrace-0.3.0.1
-resolver: lts-5.11
+- hint-server-1.4.3
+- eprocess-1.7.2
+resolver: lts-7.14
