--- a/stack.yaml
+++ b/stack.yaml
@@ -1,13 +1,10 @@
 flags: {}
 packages:
 - '.'
-- location: ../nomyx-language
-  extra-dep: true
-- location: ../imprevu
-  extra-dep: true
-- location: ../shortcut
-  extra-dep: true
 extra-deps:
+- nomyx-language-1.0.0
+- imprevu-0.1.0
+- shortcut-0.1
 - DebugTraceHelpers-0.12
 - time-recurrence-0.9.2
 - NoTrace-0.3.0.1
